WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170211
Click event from click() is not composed
https://bugs.webkit.org/show_bug.cgi?id=170211
Summary
Click event from click() is not composed
Keanu Lee
Reported
2017-03-28 15:59:51 PDT
When programatically calling `.click()` on an element, the dispatched click event is `composed: false` when it should be true (
https://github.com/w3c/webcomponents/issues/513
). Repro:
http://jsbin.com/majaran/edit?html,output
Attachments
Fixes the bug
(3.11 KB, patch)
2018-08-24 15:38 PDT
,
Ryosuke Niwa
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2017-03-29 15:09:06 PDT
We don't compose an event dispatched by click() ever. We should fix that.
Radar WebKit Bug Importer
Comment 2
2017-03-30 01:05:01 PDT
<
rdar://problem/31341442
>
Anne van Kesteren
Comment 3
2017-09-05 01:05:07 PDT
***
Bug 176327
has been marked as a duplicate of this bug. ***
Ryosuke Niwa
Comment 4
2018-08-24 15:38:24 PDT
Created
attachment 348049
[details]
Fixes the bug
Ryosuke Niwa
Comment 5
2018-08-24 16:12:30 PDT
Committed
r235337
: <
https://trac.webkit.org/changeset/235337
>
Lucas Forschler
Comment 6
2019-02-06 09:18:59 PST
Mass move bugs into the DOM component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug