Click event from click() is not composed https://bugs.webkit.org/show_bug.cgi?id=170211

Reviewed by Wenson Hsieh.

LayoutTests/imported/w3c:

Rebaselined the test now that all test cases pass.

* web-platform-tests/shadow-dom/event-composed-expected.txt:

Source/WebCore:

Fixed the bug. All simulated clicks should be composed regardless of whether it's trusted or not.
See: https://html.spec.whatwg.org/multipage/interaction.html#dom-click
     https://html.spec.whatwg.org/multipage/webappapis.html#fire-a-synthetic-mouse-event

* dom/SimulatedClick.cpp:


Canonical link: https://commits.webkit.org/203998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235337 268f45cc-cd09-0410-ab3c-d52691b4dbfc